--- a/app/src/main/res/layout/item_chat_request_base.xml
+++ b/app/src/main/res/layout/item_chat_request_base.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_height="wrap_content"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
   xmlns:tools="http://schemas.android.com/tools"
   android:orientation="vertical">
   <TextView
+    android:background="#464f64"
     android:id="@+id/textView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/size_16dp"
     android:layout_marginStart="@dimen/size_16dp"
     android:padding="@dimen/size_10dp"
-    tools:background="#464f64"
     android:textSize="@dimen/text_size_14sp"
     android:textColor="@color/white3"
     tools:text="no plans!!! :(
