Create Main header Layout
변경된 레이아웃에 따라 새로운 item_main_header 레이아웃을 추가한다.
9-Patch로 사용할 이미지를 추가한다.

Fixes https://github.com/chatty-app/chatty-app/issues/23

--- a/app/src/main/res/layout/item_main_header.xml
+++ b/app/src/main/res/layout/item_main_header.xml
@@ -45,4 +45,5 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/SIZE_3"
     app:layout_constraintBottom_toBottomOf="parent"/>
+    app:srcCompat="@color/main_puple"/>
 </android.support.constraint.ConstraintLayout>
