Redesign and rename global_header
item_global_header을 ConstraintLayout을 사용하여 변경사항에 맞게 수정한다.

Fixes https://github.com/chatty-app/chatty-app/issues/25

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical">
     <include
-      layout="@layout/item_global_header"/>
+      layout="@layout/item_main_header"/>
     <android.support.design.widget.TabLayout
       android:id="@+id/tabLayout_navBar"
       android:layout_width="match_parent"
