--- a/app/src/main/res/drawable/layout_circle.xml
+++ b/app/src/main/res/drawable/layout_circle.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <solid
-    android:color="#a5e4f0"
+    android:color="@color/main_purple"
     android:src="@drawable/sample_profile" />
   <stroke
-    android:color="#B1BCBE"
+    android:color="@color/main_purple"
     android:width="1dp"/>
-  <corners android:radius="20dp"/>
+  <corners android:radius="10dp"/>
   <padding
     android:bottom="0dp"
     android:left="0dp"
