--- a/app/src/main/res/layout/item_main_header.xml
+++ b/app/src/main/res/layout/item_main_header.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-  android:layout_height="@dimen/HEIGHT_56"
+  android:layout_height="@dimen/SIZE_56"
   android:layout_width="match_parent"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <ImageButton
+
     android:id="@+id/btn_main_header_setting"
     android:layout_height="@dimen/SIZE_24"
     android:layout_marginStart="@dimen/SIZE_20"
