--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <dimen name="HEIGHT_56">56dp</dimen>
   <dimen name="SIZE_2">2dp</dimen>
   <dimen name="SIZE_3">3dp</dimen>
+  <dimen name="SIZE_5">5dp</dimen>
   <dimen name="SIZE_20">20dp</dimen>
+  <dimen name="SIZE_21">21dp</dimen>
   <dimen name="SIZE_22">22dp</dimen>
   <dimen name="SIZE_24">24dp</dimen>
+  <dimen name="SIZE_33">33dp</dimen>
   <dimen name="SIZE_40">40dp</dimen>
+  <dimen name="SIZE_56">56dp</dimen>
+  <dimen name="SIZE_80">80dp</dimen>
   <dimen name="SIZE_108">108dp</dimen>
   <dimen name="SIZE_140">140dp</dimen>
   <dimen name="activity_main_global_header_layout_height">48dp</dimen>
