Redesign&Rename item_header
item_header.xml 의 이름을 item_my_partner로 변경한다.
ConstraintLayout 을 사용하여 디자인 수정한다.

Fixes https://github.com/chatty-app/chatty-app/issues/25

--- a/app/src/main/res/drawable/layout_circle.xml
+++ b/app/src/main/res/drawable/layout_circle.xml
@@ -5,6 +5,9 @@
     android:src="@drawable/sample_profile" />
   <stroke
     android:color="@color/main_purple"
+    android:src="@drawable/sample_profile" />
+  <stroke
+    android:color="@color/main_purple"
     android:width="1dp"/>
   <corners android:radius="10dp"/>
   <padding
