--- a/app/src/main/res/layout/item_diary_detail.xml
+++ b/app/src/main/res/layout/item_diary_detail.xml
@@ -8,6 +8,7 @@
   <include
     android:id="@+id/item_header"
     layout="@layout/item_diary_detail_header"/>
+    layout="@layout/item_my_partner"/>
   <android.support.v7.widget.RecyclerView
     android:id="@+id/recyclerView_diary"
     android:layout_width="match_parent"
