--- a/app/src/main/res/layout/item_timeline_entry.xml
+++ b/app/src/main/res/layout/item_timeline_entry.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-  android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout
+  android:layout_height="@dimen/SIZE_90"
+  android:layout_marginBottom="@dimen/size_10dp"
+  android:layout_marginTop="@dimen/size_10dp"
+  android:layout_width="match_parent"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools">
+
+  <ImageView
+    android:id="@+id/imageView_timeline"
+    android:layout_height="match_parent"
+    android:layout_marginStart="@dimen/SIZE_20"
+    android:layout_width="@dimen/SIZE_120"
+    android:src="@drawable/layout_circle2"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+
   <TextView
-    android:padding="20dp"
-    android:layout_margin="16dp"
+    android:id="@+id/textView_timeline_date"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/SIZE_20"
+    android:layout_marginTop="@dimen/SIZE_6"
+    android:layout_width="wrap_content"
+    android:letterSpacing="0.5"
+    android:textColor="@color/black0"
+    android:textStyle="normal"
+    app:layout_constraintStart_toEndOf="@id/imageView_timeline"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="2018.07.20 FRI"/>
+
+  <TextView
     android:id="@+id/textView_contents"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:textSize="14sp"
-    android:textStyle="bold"
-    android:textColor="@color/white3"
-    android:text="
-     I had part time job in the morning
- and that was way better than I thought"
-    android:background="@color/item_timeline_entry_background"/>
-</LinearLayout>
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/size_8dp"
+    android:layout_marginEnd="@dimen/SIZE_24"
+    android:layout_marginStart="@dimen/SIZE_20"
+    android:layout_marginTop="@dimen/size_8dp"
+    android:layout_width="wrap_content"
+    android:textColor="@color/black0"
+    android:textSize="@dimen/text_size_12sp"
+    android:textStyle="normal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0"
+    app:layout_constraintStart_toEndOf="@+id/imageView_timeline"
+    app:layout_constraintTop_toBottomOf="@+id/textView_timeline_date"
+    app:layout_constraintVertical_bias="0.5"
+    tools:text="Lorem ipsum dolor sit amet,
+consectetur adipiscing elit, sed
+do eiusmod tempor incididunt "/>
+
+</android.support.constraint.ConstraintLayout>
