--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,6 +3,8 @@
   <dimen name="SIZE_2">2dp</dimen>
   <dimen name="SIZE_3">3dp</dimen>
   <dimen name="SIZE_5">5dp</dimen>
+  <dimen name="SIZE_6">6dp</dimen>
+  <dimen name="SIZE_12">12dp</dimen>
   <dimen name="SIZE_20">20dp</dimen>
   <dimen name="SIZE_21">21dp</dimen>
   <dimen name="SIZE_22">22dp</dimen>
@@ -11,7 +13,9 @@
   <dimen name="SIZE_40">40dp</dimen>
   <dimen name="SIZE_56">56dp</dimen>
   <dimen name="SIZE_80">80dp</dimen>
+  <dimen name="SIZE_90">90dp</dimen>
   <dimen name="SIZE_108">108dp</dimen>
+  <dimen name="SIZE_120">120dp</dimen>
   <dimen name="SIZE_140">140dp</dimen>
   <dimen name="activity_main_global_header_layout_height">48dp</dimen>
   <dimen name="activity_main_floating_action_button_write_layout_margin">16dp</dimen>
@@ -57,10 +61,12 @@
   <dimen name="item_header_linear_layout_padding_horizontal">16dp</dimen>
   <dimen name="item_header_linear_layout_bot_prifile_text_layout_margin_start">16dp</dimen>
   <dimen name="item_header_imageView_weather_img_layout_margin_horizontal">8dp</dimen>
+  <dimen name="text_size_12sp">12sp</dimen>
   <dimen name="text_size_14sp">14sp</dimen>
   <dimen name="text_size_16sp">16sp</dimen>
   <dimen name="size_8dp">8dp</dimen>
   <dimen name="size_10dp">10dp</dimen>
   <dimen name="size_16dp">16dp</dimen>
   <dimen name="size_19dp">19dp</dimen>
+
 </resources>
