--- a/app/src/main/res/layout/item_chat_request_base.xml
+++ b/app/src/main/res/layout/item_chat_request_base.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+  android:background="@color/white2"
   android:layout_height="wrap_content"
   android:layout_width="match_parent"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:orientation="vertical">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools">
   <TextView
-    android:background="#464f64"
+    android:background="@drawable/write_answer_ninepatch_3x"
+    android:elevation="@dimen/SIZE_4"
+    android:fontFamily="sans-serif"
     android:id="@+id/textView"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/size_16dp"
-    android:layout_marginStart="@dimen/size_16dp"
-    android:padding="@dimen/size_10dp"
+    android:layout_marginBottom="@dimen/SIZE_2"
+    android:layout_marginStart="@dimen/SIZE_20"
+    android:layout_marginEnd="@dimen/SIZE_20"
+    android:layout_width="@dimen/match_constraint"
+    android:paddingBottom="@dimen/size_10dp"
+    android:paddingLeft="@dimen/size_8dp"
+    android:paddingRight="@dimen/size_8dp"
+    android:paddingTop="@dimen/size_10dp"
+    android:textColor="@color/black0"
     android:textSize="@dimen/text_size_14sp"
-    android:textColor="@color/white3"
+    android:textStyle="normal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     tools:text="no plans!!! :(
 I have part time job in the morning that&apos;s it...
 But i think i might hang out with my friends from uni next week."/>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
