--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,8 @@
 
   <color name="main_purple">#a766fe</color>
 
-  <color name="white3">#fbfbfb</color>
+  <color name="white2">#fbfbfb</color>
+  <color name="white3">#fcfcfc</color>
   <color name="white4">#fdfdfd</color>
   <color name="white5">#fff</color>
 </resources>
