--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,15 +4,20 @@
   <dimen name="SIZE_1">1dp</dimen>
   <dimen name="SIZE_2">2dp</dimen>
   <dimen name="SIZE_3">3dp</dimen>
+  <dimen name="SIZE_4">4dp</dimen>
   <dimen name="SIZE_5">5dp</dimen>
   <dimen name="SIZE_6">6dp</dimen>
+  <dimen name="SIZE_8">8dp</dimen>
   <dimen name="SIZE_12">12dp</dimen>
+  <dimen name="SIZE_13">13dp</dimen>
+  <dimen name="SIZE_18">18dp</dimen>
   <dimen name="SIZE_20">20dp</dimen>
   <dimen name="SIZE_21">21dp</dimen>
   <dimen name="SIZE_22">22dp</dimen>
   <dimen name="SIZE_24">24dp</dimen>
   <dimen name="SIZE_33">33dp</dimen>
   <dimen name="SIZE_40">40dp</dimen>
+  <dimen name="SIZE_48">48dp</dimen>
   <dimen name="SIZE_56">56dp</dimen>
   <dimen name="SIZE_80">80dp</dimen>
   <dimen name="SIZE_90">90dp</dimen>
