--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
 
   <color name="main_purple">#a766fe</color>
 
+  <color name="white1">#f3f3f3</color>
   <color name="white2">#fbfbfb</color>
   <color name="white3">#fcfcfc</color>
   <color name="white4">#fdfdfd</color>
