--- a/app/src/main/res/layout/item_diary.xml
+++ b/app/src/main/res/layout/item_diary.xml
@@ -1,29 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout
   android:layout_height="wrap_content"
-  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_marginEnd="@dimen/SIZE_20"
+  android:layout_marginStart="@dimen/SIZE_20"
+  android:layout_width="match_parent"
   android:orientation="vertical"
-  android:layout_margin="16dp">
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools">
   <TextView
+    android:background="@drawable/diary_question_ninepatch"
+    android:elevation="@dimen/SIZE_2"
+    android:fontFamily="sans-serif-medium"
     android:id="@+id/textView_question"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/SIZE_2"
+    android:layout_marginTop="@dimen/size_16dp"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/size_19dp"
+    android:letterSpacing="0.01"
+    android:paddingBottom="@dimen/size_10dp"
+    android:paddingEnd="@dimen/SIZE_8"
+    android:paddingStart="@dimen/SIZE_8"
+    android:paddingTop="@dimen/size_10dp"
+    android:textColor="@color/white5"
     android:textSize="@dimen/text_size_16sp"
-    tools:fontFamily="sans-serif"
-    android:textStyle="bold"
-    android:textColor="@color/black0"
+    android:textStyle="normal"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     tools:text="How are you feeling?"/>
   <TextView
+    android:background="@drawable/diary_answer_ninepatch"
+    android:elevation="@dimen/SIZE_2"
     android:id="@+id/textView_answer"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/size_8dp"
-    android:layout_marginStart="@dimen/size_8dp"
-    android:textSize="@dimen/text_size_14sp"
+    android:layout_marginBottom="@dimen/SIZE_4"
+    android:layout_marginTop="@dimen/size_10dp"
+    android:layout_width="@dimen/match_constraint"
+    android:paddingBottom="@dimen/SIZE_15"
+    android:paddingEnd="@dimen/SIZE_8"
+    android:paddingStart="@dimen/SIZE_8"
+    android:paddingTop="@dimen/size_10dp"
     android:textColor="@color/black0"
+    android:textSize="@dimen/text_size_14sp"
+    android:textStyle="normal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView_question"
     tools:text="pretty good. I had study session with friends from mashup.
 I learned how to make a random chatbot!!!!!!!!
 It was really basic but still i had fun today cuz it&apos;s
 been a while since i learned sth new and fun."/>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
