--- a/app/src/main/res/layout/item_diary_detail_header.xml
+++ b/app/src/main/res/layout/item_diary_detail_header.xml
@@ -1,48 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-  android:layout_height="wrap_content"
+  android:background="@color/white1"
+  android:elevation="@dimen/SIZE_2"
+  android:layout_height="@dimen/SIZE_56"
+  android:layout_marginBottom="@dimen/SIZE_2"
   android:layout_width="match_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-  <LinearLayout
-    android:gravity="center_vertical"
-    android:layout_height="@dimen/SIZE_56"
-    android:layout_width="match_parent"
-    android:paddingHorizontal="@dimen/item_header_linear_layout_padding_horizontal">
-    <ImageView
-      android:layout_height="@dimen/SIZE_40"
-      android:layout_width="@dimen/SIZE_40"
-      android:src="@drawable/sample_profile"/>
-    <LinearLayout
-      android:id="@+id/linearLayout_bot_prifile_text"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/item_header_linear_layout_bot_prifile_text_layout_margin_start"
-      android:layout_weight="1"
-      android:layout_width="match_parent"
-      android:orientation="vertical">
-      <TextView
-        android:id="@+id/textView_name"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:text="@string/text_name"
-        android:textColor="@color/black2"
-        />
-      <TextView
-        android:id="@+id/textView_date"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:text="@string/text_date"
-        android:textColor="@color/black2"/>
-    </LinearLayout>
-    <ImageView
-      android:id="@+id/imageView_weather_img"
-      android:layout_height="@dimen/SIZE_22"
-      android:layout_marginHorizontal="@dimen/item_header_imageView_weather_img_layout_margin_horizontal"
-      android:layout_width="@dimen/SIZE_22"
-      android:src="@color/gray3"/>
-    <TextView
-      android:id="@+id/textView_weather"
-      android:layout_height="wrap_content"
-      android:layout_width="wrap_content"
-      android:text="@string/text_weather"/>
-  </LinearLayout>
+  android:paddingStart="@dimen/SIZE_20"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto">
+
+  <ImageView
+    android:fontFamily="sans-serif-medium"
+    android:id="@+id/image_diary_partner"
+    android:layout_height="@dimen/SIZE_40"
+    android:layout_marginTop="@dimen/SIZE_8"
+    android:layout_width="@dimen/SIZE_40"
+    android:src="@drawable/sample_profile"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+  <TextView
+    android:fontFamily="sans-serif"
+    android:id="@+id/textView_diary_partner_name"
+    android:layout_height="@dimen/SIZE_21"
+    android:layout_marginStart="@dimen/size_16dp"
+    android:layout_marginTop="@dimen/SIZE_8"
+    android:layout_width="wrap_content"
+    android:letterSpacing="0.01"
+    android:text="@string/text_name"
+    android:textColor="@color/black5"
+    android:textSize="@dimen/text_size_16sp"
+    android:textStyle="normal"
+    app:layout_constraintStart_toEndOf="@+id/image_diary_partner"
+    app:layout_constraintTop_toTopOf="parent"/>
+  <TextView
+    android:id="@+id/textView_diary_date"
+    android:layout_height="@dimen/size_19dp"
+    android:layout_marginStart="@dimen/size_16dp"
+    android:layout_width="wrap_content"
+    android:letterSpacing="0.01"
+    android:text="@string/text_date"
+    android:textColor="@color/black2"
+    android:textSize="@dimen/text_size_14sp"
+    android:textStyle="normal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/image_diary_partner"
+    app:layout_constraintTop_toBottomOf="@+id/textView_diary_partner_name"/>
+  <ImageView
+    android:id="@+id/imageView_diary_weather"
+    android:layout_height="@dimen/SIZE_24"
+    android:layout_marginBottom="@dimen/size_16dp"
+    android:layout_marginTop="@dimen/size_16dp"
+    android:layout_marginEnd="@dimen/size_16dp"
+    android:layout_width="@dimen/SIZE_24"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@id/imageView_diary_emotion"
+    app:layout_constraintTop_toTopOf="parent"/>
+  <ImageView
+    android:id="@+id/imageView_diary_emotion"
+    android:layout_height="@dimen/SIZE_24"
+    android:layout_marginBottom="@dimen/size_16dp"
+    android:layout_marginEnd="@dimen/SIZE_20"
+    android:layout_marginTop="@dimen/size_16dp"
+    android:layout_width="@dimen/SIZE_24"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
