--- a/app/src/main/res/layout/item_global_header.xml
+++ b/app/src/main/res/layout/item_global_header.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
   android:background="@color/white5"
+  android:elevation="@dimen/SIZE_2"
   android:layout_height="@dimen/SIZE_56"
   android:layout_width="match_parent"
   xmlns:android="http://schemas.android.com/apk/res/android"
@@ -41,10 +42,4 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.5"/>
-  <View
-    android:background="@color/gray1"
-    android:id="@+id/view"
-    android:layout_height="@dimen/SIZE_3"
-    android:layout_width="match_parent"
-    app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
