--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -1,75 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-  android:background="@color/white3"
-  android:layout_height="match_parent"
-  android:layout_width="match_parent"
-  tools:context=".view.write.WriteActivity"
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools">
-  <include
-    android:id="@+id/item_global_header"
-    android:layout_height="@dimen/SIZE_56"
-    android:layout_width="@dimen/match_constraint"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    layout="@layout/item_global_header"/>
-  <android.support.v7.widget.RecyclerView
-    android:id="@+id/recyclerView_dialogue"
-    android:layout_height="wrap_content"
-    android:layout_width="@dimen/match_constraint"
-    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/item_global_header"
-    app:layout_constraintVertical_bias="0.0"/>
+  <data>
+    <variable
+      name="activity"
+      type="com.chatty.android.chattyClient.view.write.WriteActivity"/>
+  </data>
   <android.support.constraint.ConstraintLayout
-    android:background="@color/gray1"
-    android:id="@+id/constraintLayout"
-    android:layout_height="55dp"
-    android:layout_width="@dimen/match_constraint"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent">
-    <ImageButton
-      android:id="@+id/btn_write_plus"
-      android:layout_height="@dimen/SIZE_24"
-      android:layout_marginBottom="@dimen/size_8dp"
-      android:layout_marginStart="@dimen/SIZE_20"
-      android:layout_marginTop="@dimen/size_8dp"
-      android:layout_width="@dimen/SIZE_24"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
-
-    <EditText
-      android:background="@drawable/layout_chatbox"
-      android:id="@+id/editText_writeInput"
-      android:layout_height="@dimen/match_constraint"
-      android:layout_marginBottom="@dimen/size_8dp"
-      android:layout_marginEnd="@dimen/SIZE_20"
-      android:layout_marginStart="@dimen/SIZE_12"
-      android:layout_marginTop="@dimen/size_8dp"
+    android:background="@color/white3"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+    <include
+      android:id="@+id/item_global_header"
+      android:layout_height="@dimen/SIZE_56"
       android:layout_width="@dimen/match_constraint"
-      android:textColor="@color/black2"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      layout="@layout/item_global_header"/>
+    <android.support.v7.widget.RecyclerView
+      android:id="@+id/recyclerView_dialogue"
+      android:layout_height="wrap_content"
+      android:layout_width="@dimen/match_constraint"
+      app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/item_global_header"
+      app:layout_constraintVertical_bias="0.0"/>
+    <FrameLayout
+      android:id="@+id/imageListFrame"
+      android:layout_gravity="bottom"
+      android:layout_height="wrap_content"
+      android:layout_width="match_parent">
+      <ImageView
+        android:id="@+id/iv_image"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:padding="@dimen/SIZE_16"/>
+      <HorizontalScrollView
+        android:id="@+id/hori_scroll_view"
+        android:fillViewport="false"
+        android:foregroundGravity="left"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <LinearLayout
+          android:id="@+id/selected_photos_container"
+          android:gravity="left"
+          android:layout_gravity="left"
+          android:layout_height="wrap_content"
+          android:layout_width="match_parent"
+          android:orientation="horizontal"
+          android:visibility="visible"
+          tools:ignore="RtlHardcoded">
+        </LinearLayout>
+      </HorizontalScrollView>
+    </FrameLayout>
+    <android.support.constraint.ConstraintLayout
+      android:background="@color/gray1"
+      android:id="@+id/constraintLayout"
+      android:layout_height="55dp"
+      android:layout_width="@dimen/match_constraint"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/btn_write_plus"
-      app:layout_constraintTop_toTopOf="parent"/>
-    <Button
-      android:background="@color/colorPrimaryDark"
-      android:id="@+id/button_writeSubmit"
-      android:layout_height="@dimen/SIZE_24"
-      android:layout_marginBottom="@dimen/SIZE_4"
-      android:layout_marginEnd="@dimen/SIZE_8"
-      android:layout_marginTop="@dimen/SIZE_4"
-      android:layout_width="@dimen/SIZE_24"
-      android:text="@string/WRITE_SUBMIT"
-      android:textColor="@color/black3"
-      app:layout_constraintBottom_toBottomOf="@+id/editText_writeInput"
-      app:layout_constraintEnd_toEndOf="@+id/editText_writeInput"
-      app:layout_constraintTop_toTopOf="@+id/editText_writeInput"/>
-  </android.support.constraint.ConstraintLayout>
+      app:layout_constraintStart_toStartOf="parent">
+      <ImageButton
+        android:onClick="@{activity::renderPlusImage}"
+        android:id="@+id/btn_write_plus"
+        android:layout_height="@dimen/SIZE_24"
+        android:layout_marginBottom="@dimen/size_8dp"
+        android:layout_marginStart="@dimen/SIZE_20"
+        android:layout_marginTop="@dimen/size_8dp"
+        android:layout_width="@dimen/SIZE_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+      <EditText
+        android:background="@drawable/layout_chatbox"
+        android:id="@+id/editText_writeInput"
+        android:layout_height="@dimen/match_constraint"
+        android:layout_marginBottom="@dimen/size_8dp"
+        android:layout_marginEnd="@dimen/SIZE_20"
+        android:layout_marginStart="@dimen/SIZE_12"
+        android:layout_marginTop="@dimen/size_8dp"
+        android:layout_width="@dimen/match_constraint"
+        android:textColor="@color/black2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_write_plus"
+        app:layout_constraintTop_toTopOf="parent"/>
+      <Button
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/button_writeSubmit"
+        android:layout_height="@dimen/SIZE_24"
+        android:layout_marginBottom="@dimen/SIZE_4"
+        android:layout_marginEnd="@dimen/SIZE_8"
+        android:layout_marginTop="@dimen/SIZE_4"
+        android:layout_width="@dimen/SIZE_24"
+        android:text="@string/WRITE_SUBMIT"
+        android:textColor="@color/black3"
+        app:layout_constraintBottom_toBottomOf="@+id/editText_writeInput"
+        app:layout_constraintEnd_toEndOf="@+id/editText_writeInput"
+        app:layout_constraintTop_toTopOf="@+id/editText_writeInput"/>
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
+</layout>
