--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -34,6 +34,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent">
     <ImageButton
+      android:background="@color/gray1"
       android:id="@+id/btn_write_plus"
       android:layout_height="@dimen/SIZE_24"
       android:layout_marginBottom="@dimen/size_8dp"
@@ -42,7 +43,8 @@
       android:layout_width="@dimen/SIZE_24"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/ic_icon_add"/>
 
     <EditText
       android:background="@drawable/layout_chatbox"
@@ -59,17 +61,17 @@
       app:layout_constraintStart_toEndOf="@+id/btn_write_plus"
       app:layout_constraintTop_toTopOf="parent"/>
     <Button
-      android:background="@color/colorPrimaryDark"
+      android:backgroundTint="@color/white3"
       android:id="@+id/button_writeSubmit"
       android:layout_height="@dimen/SIZE_24"
       android:layout_marginBottom="@dimen/SIZE_4"
       android:layout_marginEnd="@dimen/SIZE_8"
       android:layout_marginTop="@dimen/SIZE_4"
       android:layout_width="@dimen/SIZE_24"
-      android:text="@string/WRITE_SUBMIT"
       android:textColor="@color/black3"
       app:layout_constraintBottom_toBottomOf="@+id/editText_writeInput"
       app:layout_constraintEnd_toEndOf="@+id/editText_writeInput"
-      app:layout_constraintTop_toTopOf="@+id/editText_writeInput"/>
+      app:layout_constraintTop_toTopOf="@+id/editText_writeInput"
+      app:srcCompat="@drawable/ic_icon_next"/>
   </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
