--- a/app/src/main/res/layout/item_global_header.xml
+++ b/app/src/main/res/layout/item_global_header.xml
@@ -7,6 +7,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <ImageButton
+    android:background="@color/white5"
     android:id="@+id/button_timeline_left"
     android:layout_height="@dimen/SIZE_24"
     android:layout_marginStart="@dimen/SIZE_20"
@@ -14,7 +15,8 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.5"/>
+    app:layout_constraintVertical_bias="0.5"
+    app:srcCompat="@drawable/ic_icon_back"/>
   <TextView
     android:gravity="center"
     android:fontFamily="sans-serif"
