--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,13 +64,16 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/main_textView_Timeline"/>
+
   <android.support.design.widget.FloatingActionButton
-    android:background="@drawable/write_button"
+    android:backgroundTint="@color/white5"
     android:id="@+id/btn_start_chatting"
+    android:layout_width="64dp"
     android:layout_height="64dp"
     android:layout_gravity="end|bottom"
     android:layout_margin="@dimen/activity_main_floating_action_button_write_layout_margin"
-    android:layout_width="64dp"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"/>
+    android:background="@drawable/write_button"
+    android:visibility="invisible"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
