--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -17,17 +17,17 @@
     layout="@layout/item_global_header"/>
   <android.support.v7.widget.RecyclerView
     android:id="@+id/recyclerView_dialogue"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/match_constraint"
     android:layout_width="@dimen/match_constraint"
-    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+    app:layout_constraintBottom_toTopOf="@id/chat_box_constraintLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/item_global_header"
+    app:layout_constraintTop_toBottomOf="@id/item_global_header"
     app:layout_constraintVertical_bias="0.0"/>
   <android.support.constraint.ConstraintLayout
     android:background="@color/gray1"
-    android:id="@+id/constraintLayout"
+    android:id="@+id/chat_box_constraintLayout"
     android:layout_height="55dp"
     android:layout_width="@dimen/match_constraint"
     app:layout_constraintBottom_toBottomOf="parent"
